--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,16 @@ dependencies {
 
 	// MySQLドライバ
 	runtimeOnly 'com.mysql:mysql-connector-j'
+	// APサーバー
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	// SpringBoot Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// MyBatis Test
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+	// H2(InMemoryDB)
+	testImplementation 'com.h2database:h2:2.2.224'
+
 }
 
 tasks.named('test') {
